tests/semantic/valid/07_void_function.tc
void setX(void) {
    return;
}
int main(void) {
    setX();
    return 0;
}
