tests/semantic/invalid/16_duplicate_param.tc
// ERR_REDEFINED_SYMBOL: duplicate parameter name in function definition
int foo(int a, int a) {
    return a;
}
int main(void) {
    return 0;
}
